# FL-SLAM

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prospector.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements.txt  vectors.db-shm  vectors.db-wal
H_Aware/: Hesitancy_Aware.jl  Manifest.toml  Project.toml  test_hesitancy_aware.jl
archive/: README.md  frontend_node_ORIGINAL_BACKUP.py
docker/: Dockerfile  docker-compose.yml
docs/: 3D_POINTCLOUD.md  EVALUATION.md  (+35 more)
fl_ws/src/fl_slam_poc/: CMakeLists.txt  PACKAGE_AUDIT.md  conftest.py  package.xml  pytest.ini  setup.cfg  setup.py
fl_ws/src/fl_slam_poc/config/: README.md  config_manifest.yaml  fl_slam_poc_base.yaml  gc_backend.yaml  gc_dead_end_audit.yaml  gc_unified.yaml  qos_override.yaml
fl_ws/src/fl_slam_poc/config/presets/: m3dgr.yaml
fl_ws/src/fl_slam_poc/fl_slam_poc/: config.py  constants.py
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/: __init__.py  backend_node.py  camera_batch_utils.py  config.py  diagnostics.py  gaussian_info.py  map_publisher.py  pipeline.py  rerun_visualizer.py
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/diagnostics/: gpu.py  publish.py  status.py
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/factors/: imu.py  loop.py  odom.py
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/fusion/: __init__.py  gaussian_info.py  information_distances.py  weights.py
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/math/: __init__.py  imu_kernel.py
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/models/: __init__.py  timestamp.py
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/operators/: __init__.py  anchor_drift.py  binning.py  deskew.py  deskew_constant_twist.py  excitation.py  fusion.py  hypothesis.py  imu_evidence.py  imu_gyro_evidence.py  imu_preintegration.py  imu_preintegration_factor.py  inverse_wishart_jax.py  kappa.py  lidar_bucket_noise_iw_jax.py  lidar_evidence.py  lidar_surfel_extraction.py  map_update.py  measurement_noise_iw_jax.py  odom_evidence.py  odom_twist_evidence.py  planar_prior.py  point_budget.py  predict.py  primitive_association.py  recompose.py  translation.py  visual_pose_evidence.py  wahba.py
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/parameters/: __init__.py  timestamp.py
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/routing/: __init__.py  dirichlet_router.py
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/state/: modules.py  rgbd.py
fl_ws/src/fl_slam_poc/fl_slam_poc/backend/structures/: __init__.py  bin_atlas.py  inverse_wishart_jax.py  lidar_bucket_noise_iw_jax.py  measurement_noise_iw_jax.py  primitive_map.py
fl_ws/src/fl_slam_poc/fl_slam_poc/common/: __init__.py  belief.py  certificates.py  constants.py  dirichlet_geom.py  jax_init.py  ma_hex_web.py  param_models.py  primitives.py  tiling.py  validation.py
fl_ws/src/fl_slam_poc/fl_slam_poc/common/geometry/: __init__.py  se3_jax.py  se3_numpy.py
fl_ws/src/fl_slam_poc/fl_slam_poc/common/transforms/: __init__.py  se3.py
fl_ws/src/fl_slam_poc/fl_slam_poc/frontend/: __init__.py  anchor_manager.py  descriptor_builder.py  frontend_node.py  livox_converter.py  loop_processor.py  rgbd_processor.py  sensor_io.py
fl_ws/src/fl_slam_poc/fl_slam_poc/frontend/anchors/: __init__.py  anchor_manager.py  descriptor_builder.py
fl_ws/src/fl_slam_poc/fl_slam_poc/frontend/audit/: __init__.py  dead_end_audit_node.py  wiring_auditor.py
fl_ws/src/fl_slam_poc/fl_slam_poc/frontend/hub/: __init__.py  gc_sensor_hub.py
fl_ws/src/fl_slam_poc/fl_slam_poc/frontend/keyframes/: __init__.py  anchor_manager.py
fl_ws/src/fl_slam_poc/fl_slam_poc/frontend/loops/: __init__.py  icp.py  loop_processor.py  pointcloud_gpu.py
fl_ws/src/fl_slam_poc/fl_slam_poc/frontend/processing/: __init__.py  rgbd_processor.py  sensor_io.py
fl_ws/src/fl_slam_poc/fl_slam_poc/frontend/scan/: __init__.py  icp.py  pointcloud_gpu.py
fl_ws/src/fl_slam_poc/fl_slam_poc/frontend/sensors/: __init__.py  imu_normalizer.py  lidar_camera_depth_fusion.py  livox_converter.py  odom_bridge.py  odom_normalizer.py  pointcloud_passthrough.py  rgbd_processor.py  sensor_io.py  splat_prep.py  tb3_odom_bridge.py  time_alignment.py  visual_types.py
fl_ws/src/fl_slam_poc/fl_slam_poc/geometry/: __init__.py  se3.py
fl_ws/src/fl_slam_poc/fl_slam_poc/models/: __init__.py  nig.py  timestamp.py
fl_ws/src/fl_slam_poc/fl_slam_poc/nodes/: dirichlet_backend_node.py  fl_backend_node.py  frontend_node.py  sim_semantics_node.py  sim_world_node.py  tb3_odom_bridge_node.py
fl_ws/src/fl_slam_poc/fl_slam_poc/operators/: __init__.py  dirichlet_geom.py  gaussian_info.py  icp.py  multimodal_fusion.py  op_report.py  vmf_geometry.py
fl_ws/src/fl_slam_poc/fl_slam_poc/utility_nodes/: __init__.py  livox_converter.py  sim_world.py  tb3_odom_bridge.py
fl_ws/src/fl_slam_poc/fl_slam_poc/utils/: __init__.py  sensor_sync.py  status_monitor.py
fl_ws/src/fl_slam_poc/launch/: gc_rosbag.launch.py  poc_3d_rosbag.launch.py  poc_a.launch.py  poc_all.launch.py  poc_m3dgr_rosbag.launch.py  poc_tb3.launch.py  poc_tb3_rosbag.launch.py
fl_ws/src/fl_slam_poc/msg/: AnchorCreate.msg  LoopFactor.msg  VisualFeature.msg  VisualFeatureBatch.msg
fl_ws/src/fl_slam_poc/scripts/: backend_node  fl_backend_node  frontend_node  gc_backend_node  gc_dead_end_audit_node  gc_sensor_hub  imu_normalizer  livox_converter  odom_normalizer  sim_world_node  tb3_odom_bridge  tb3_odom_bridge_node  wiring_auditor
fl_ws/src/fl_slam_poc/src/: camera_rgbd_node.cpp  image_decompress_node.cpp  visual_feature_node.cpp
fl_ws/src/fl_slam_poc/test/: __init__.py  conftest.py  test_audit_invariants.py  test_budget_assertions.py  test_cert_schema.py  test_geometric_compositional_invariants.py  test_golden_child_invariants.py  test_imu_fusion_contract_b.py  test_imu_kernel_math.py  test_map_color_provenance.py  test_operators.py  test_pointcloud_3d.py  test_primitive_map_merge_reduce.py  test_primitives.py  test_rgbd_multimodal.py  test_rotation_conversions.py  test_visual_lidar_plan.py
fl_ws/src/livox_ros_driver2/: CMakeLists.txt  package.xml
fl_ws/src/livox_ros_driver2/msg/: CustomMsg.msg  CustomPoint.msg
(+124 files in other folders)
